crates/ty_python_semantic/resources/mdtest/snapshots/instance_layout_conf…_-_Tests_for_ty's_`inst…_-_Builtins_with_implic…_(4c3d127986a58f11).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: instance_layout_conflict.md - Tests for ty's `instance-layout-conflict` error code - Builtins with implicit layouts
mdtest path: crates/ty_python_semantic/resources/mdtest/instance_layout_conflict.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import Protocol, TypedDict, disjoint_base
 2 | 
 3 | # fmt: off
 4 | 
 5 | class A(  # error: [instance-layout-conflict]
 6 |     int,
 7 |     str
 8 | ): ...
 9 | 
10 | class B:
11 |     __slots__ = ("b",)
12 | 
13 | class C(  # error: [instance-layout-conflict]
14 |     int,
15 |     B,
16 | ): ...
17 | class D(int): ...
18 | 
19 | class E(  # error: [instance-layout-conflict]
20 |     D,
21 |     str
22 | ): ...
23 | 
24 | class F(int, bytes, bytearray): ...  # error: [instance-layout-conflict]
25 | 
26 | @disjoint_base
27 | class G: ...
28 | 
29 | @disjoint_base
30 | class H: ...
31 | @disjoint_base  # error: [invalid-typed-dict-header] "`@disjoint_base` cannot be used with `TypedDict` class `Movie`"
32 | class Movie(TypedDict):
33 |     name: str
34 | @disjoint_base  # error: [invalid-protocol] "`@disjoint_base` cannot be used with protocol class `SupportsClose`"
35 | class SupportsClose(Protocol):
36 |     def close(self) -> None: ...
37 | class I(  # error: [instance-layout-conflict]
38 |     G,
39 |     H
40 | ): ...
41 | # fmt: on
42 | # error: [invalid-generic-class]
43 | class Foo(range, str): ...  # error: [subclass-of-final-class]
```

# Diagnostics

```
error[instance-layout-conflict]: Class will raise `TypeError` at runtime due to incompatible bases
 --> src/mdtest_snippet.py:5:7
  |
5 |   class A(  # error: [instance-layout-conflict]
  |  _______^
6 | |     int,
7 | |     str
8 | | ): ...
  | |_^ Bases `int` and `str` cannot be combined in multiple inheritance
  |
info: Two classes cannot coexist in a class's MRO if their instances have incompatible memory layouts
 --> src/mdtest_snippet.py:6:5
  |
6 |     int,
  |     --- `int` instances have a distinct memory layout because of the way `int` is implemented in a C extension
7 |     str
  |     --- `str` instances have a distinct memory layout because of the way `str` is implemented in a C extension

```

```
error[instance-layout-conflict]: Class will raise `TypeError` at runtime due to incompatible bases
  --> src/mdtest_snippet.py:13:7
   |
13 |   class C(  # error: [instance-layout-conflict]
   |  _______^
14 | |     int,
15 | |     B,
16 | | ): ...
   | |_^ Bases `int` and `B` cannot be combined in multiple inheritance
   |
info: Two classes cannot coexist in a class's MRO if their instances have incompatible memory layouts
  --> src/mdtest_snippet.py:14:5
   |
14 |     int,
   |     --- `int` instances have a distinct memory layout because of the way `int` is implemented in a C extension
15 |     B,
   |     - `B` instances have a distinct memory layout because `B` defines non-empty `__slots__`

```

```
error[instance-layout-conflict]: Class will raise `TypeError` at runtime due to incompatible bases
  --> src/mdtest_snippet.py:19:7
   |
19 |   class E(  # error: [instance-layout-conflict]
   |  _______^
20 | |     D,
21 | |     str
22 | | ): ...
   | |_^ Bases `D` and `str` cannot be combined in multiple inheritance
   |
info: Two classes cannot coexist in a class's MRO if their instances have incompatible memory layouts
  --> src/mdtest_snippet.py:20:5
   |
20 |     D,
   |     -
   |     |
   |     `D` instances have a distinct memory layout because `D` inherits from `int`
   |     `int` instances have a distinct memory layout because of the way `int` is implemented in a C extension
21 |     str
   |     --- `str` instances have a distinct memory layout because of the way `str` is implemented in a C extension

```

```
error[instance-layout-conflict]: Class will raise `TypeError` at runtime due to incompatible bases
  --> src/mdtest_snippet.py:24:7
   |
24 | class F(int, bytes, bytearray): ...  # error: [instance-layout-conflict]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^ Bases `int`, `bytes` and `bytearray` cannot be combined in multiple inheritance
   |
info: Two classes cannot coexist in a class's MRO if their instances have incompatible memory layouts
  --> src/mdtest_snippet.py:24:9
   |
24 | class F(int, bytes, bytearray): ...  # error: [instance-layout-conflict]
   |         ---  -----  --------- `bytearray` instances have a distinct memory layout because of the way `bytearray` is implemented in a C extension
   |         |    |
   |         |    `bytes` instances have a distinct memory layout because of the way `bytes` is implemented in a C extension
   |         `int` instances have a distinct memory layout because of the way `int` is implemented in a C extension

```

```
error[invalid-typed-dict-header]: `@disjoint_base` cannot be used with `TypedDict` class `Movie`
  --> src/mdtest_snippet.py:31:1
   |
31 | @disjoint_base  # error: [invalid-typed-dict-header] "`@disjoint_base` cannot be used with `TypedDict` class `Movie`"
   | ^^^^^^^^^^^^^^

```

```
error[invalid-protocol]: `@disjoint_base` cannot be used with protocol class `SupportsClose`
  --> src/mdtest_snippet.py:34:1
   |
34 | @disjoint_base  # error: [invalid-protocol] "`@disjoint_base` cannot be used with protocol class `SupportsClose`"
   | ^^^^^^^^^^^^^^

```

```
error[instance-layout-conflict]: Class will raise `TypeError` at runtime due to incompatible bases
  --> src/mdtest_snippet.py:37:7
   |
37 |   class I(  # error: [instance-layout-conflict]
   |  _______^
38 | |     G,
39 | |     H
40 | | ): ...
   | |_^ Bases `G` and `H` cannot be combined in multiple inheritance
   |
info: Two classes cannot coexist in a class's MRO if their instances have incompatible memory layouts
  --> src/mdtest_snippet.py:38:5
   |
38 |     G,
   |     - `G` instances have a distinct memory layout because of the way `G` is implemented in a C extension
39 |     H
   |     - `H` instances have a distinct memory layout because of the way `H` is implemented in a C extension

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Sequence` among class bases
  --> src/mdtest_snippet.py:43:7
   |
43 | class Foo(range, str): ...  # error: [subclass-of-final-class]
   |       ^^^^-----^^---^
   |           |      |
   |           |      Later class base inherits from `Sequence[str]`
   |           Earlier class base inherits from `Sequence[int]`

```

```
error[subclass-of-final-class]: Class `Foo` cannot inherit from final class `range`
  --> src/mdtest_snippet.py:43:11
   |
43 | class Foo(range, str): ...  # error: [subclass-of-final-class]
   |           ^^^^^

```
